<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="@string/Input"
        android:textSize="50sp"
        android:gravity="end|bottom"
        android:textColor="@color/white"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/lightGrey"
            android:layout_weight="1"
            android:text="@string/clr"
            android:textSize="25sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onCLR"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnSwitch"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/lightGrey"
            android:layout_weight="1"
            android:text="@string/Switch"
            android:textSize="35sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onSwitch"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/lightGrey"
            android:layout_weight="1"
            android:text="@string/Percent"
            android:textSize="35sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onPercent"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:layout_weight="1"
            android:text="/"
            android:textSize="35sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onOperator"
            tools:ignore="OnClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onOperator"
            tools:ignore="OnClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:layout_weight="1"
            android:text="@string/Minus"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onOperator"
            tools:ignore="OnClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:layout_weight="1"
            android:text="@string/Plus"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onOperator"
            tools:ignore="OnClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="2"
            android:text="@string/_0"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:gravity="left|center"
            android:paddingLeft="35sp"
            android:onClick="onDigit"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btnDecimalPoint"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/darkGrey"
            android:layout_weight="1"
            android:text="@string/DecimalPoint"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onDecimalPoint"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/orange"
            android:layout_weight="1"
            android:text="@string/Equal"
            android:textSize="45sp"
            android:layout_margin="5dp"
            app:cornerRadius="60dp"
            android:onClick="onEqual"
            tools:ignore="OnClick"/>

    </LinearLayout>


</LinearLayout>